# LinuxCam

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeListsv2.txt  Dockerfile  InputDeviceContext.cpp  InputDeviceContext.h  JPEGManager.cpp  JPEGManager.h  README.md  Todo.md  application.cpp  application.h  camera.cpp  camera.h  codec.h  codecov.yml  common.h  config.hpp  config.yaml  debug_config_test.cpp  detector.h  detectors.h  dlibDetectors.cpp  dlibDetectors.h  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  face.cpp  face.h  files_to_format.txt  image.h  imageRenderGL.cpp  imageRenderGL.h  instructions.md  main.cpp  math_utils.h  (+7 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  clang-tidy.yml  code-formatting.yml  docker-ci.yml  flawfinder.yml
include/FunnyFace/: GifReader.h  InputDeviceContext.h  JPEGManager.h  application.h  camera.h  cameraManager.h  codec.h  codecFactory.h  common.h  depthImage.h  detectors.h  dlibDetectors.h  face.h  image.h  imageLoader.h  imageRenderGL.h  inputWebcam.h  math_utils.h  outputWebcam.h  profiler.h  ui.h  v4l2loopbackWritter.h  webcam.h
include/LinuxFace/: GifReader.h  JPEGManager.h  application.h  cameraManager.h  codec.h  codecFactory.h  common.h  corrected_mediapipe_wflw_mapping.h  depthImage.h  detectors.h  dlibDetectors.h  face.h  image.h  imageLoader.h  imageRenderGL.h  inputWebcam.h  landmark_converter.h  math_utils.h  mediaPipe_FaceLandmarks.h  profiler.h  ui.h  v4l2loopbackWritter.h  videoLoader.h  webcam.h  wflw_test.h  window.h
media/: output.ppm
scripts/: apply_clang_tidy.sh  apply_naming_convention.sh  download_models.py  download_wflw_dataset.sh  extract_emap_matrix.py  generate_coverage.sh  generate_ssl_certs.sh  setup_sanitizers.sh
src/: GifReader.cpp  InputDeviceContext.cpp  JPEGManager.cpp  application.cpp  camera.cpp  cameraManager.cpp  codecFactory.cpp  config.hpp  dlibDetectors.cpp  face.cpp  h264Codec.cpp  imageLoader.cpp  imageRenderGL.cpp  landmark_converter.cpp  main.cpp  profiler.cpp  queue.hpp  ui.cpp  v4l2loopbackWritter.cpp  videoLoader.cpp  wflw_test.cpp  window.cpp
src/Codec/: JPEGManager.cpp
src/Image/: alpha_blender.cpp  gif.cpp  image.cpp  image_processor.cpp  image_utils.cpp  mediaManager.cpp  pixel_converter.cpp  text_renderer.cpp  urlImageDownloader.cpp
src/UI/: PaintWebcam.cpp  layerManager.cpp  mediaBrowserUi.cpp  paintWebcam.cpp
src/Webcam/: inputWebcam.cpp  outputWebcam.cpp  v4l2loopbackWritter.cpp  webcam.cpp
src/onnx/: MODNet.cpp  arcfaceRecognizer.cpp  faceSegmentation.cpp  face_detection_unused.cpp  fsanet.cpp  inswapper.cpp  mediaPipe_FaceLandmarks.cpp  metric3d.cpp  onnxDetector.cpp  pfld.cpp  rvm.cpp  scrfd.cpp  swapPipeline.cpp
src/web/: streamBroadcaster.cpp  videoStreamController.cpp  webrtcTransport.cpp  wsInputDevice.cpp
src/webscraping/: pexelsAPI.cpp
tests/: coordinate_mapping_validation.cpp  dataset_utils.cpp  debug_conversion_type.cpp  debug_paste_detailed.cpp  image_coordinate_mapping_tests.cpp  test_h264Codec.cpp  test_utils.cpp  test_utils.h
tests/UI/: test_layerManager.cpp  test_mediaBrowserUI.cpp  test_mediaBrowserUI_new.cpp  test_ui.cpp
tests/arcface_unit/: test_arcface_real_image.cpp
tests/cameraManager/: test_cameraManager.cpp
tests/codec/: test_codec.cpp
tests/codecFactory/: test_codecFactory.cpp
tests/common/: dataset_utils.cpp  dataset_utils.h  test_common.cpp  test_utils.cpp  test_utils.h
tests/config/: test_config.cpp  test_config.h.in  test_path_normalization.cpp
tests/debug/: debug_alpha_direct.cpp  debug_conversion_type.cpp
tests/depthImage/: test_depthImage.cpp  test_depthImage_fixed.cpp
tests/detectors/: test_detectors.cpp
tests/embeddingModels_integration/: test_embeddingModels_integration.cpp
tests/face/: test_face.cpp  test_face_iou_matching.cpp
tests/face_segmentation_unit/: test_face_segmentation_detector.cpp
tests/imageRenderGL/: test_imageRenderGL.cpp
tests/image_loader/: test_imageLoader.cpp
tests/image_tests/: test_image_constructors.cpp  test_image_io.cpp  test_image_misc.cpp  test_image_paste.cpp  test_image_pixel_ops.cpp  test_image_scaling.cpp  test_image_tensor.cpp  test_image_transform.cpp  test_pixel_architecture.cpp
tests/image_utils/: test_image_utils.cpp
tests/image_utils_unit/: test_image_quality_metrics.cpp
tests/inputWebcam/: test_inputWebcam.cpp
tests/inswapper_unit/: test_inswapper_real_image.cpp  test_inswapper_unit.cpp
tests/landmark_converter/: CMakeLists.txt  test_landmark_converter.cpp  test_landmark_mapping_validation.cpp  test_mediapipe_landmark_converter.cpp
tests/math_utils/: test_affine.cpp  test_dda.cpp  test_dda_extended.cpp  test_distance.cpp  test_invert_affine.cpp  test_iou.cpp  test_l2norm.cpp  test_point_extended.cpp  test_procrustes.cpp  test_rect_extended.cpp  test_rotate_point.cpp  test_similarity.cpp  test_structs.cpp
tests/media_manager/: test_mediaManager.cpp
tests/mediapipe_unit/: CMakeLists.txt  test_mediapipe_landmark_conversion.cpp  test_mediapipe_real_image.cpp  test_mediapipe_unit.cpp  test_simple_mediapipe_conversion.cpp
tests/pfld_unit/: test_pfld_unit.cpp
tests/pixel_conversion/: test_pixel_conversion.cpp
tests/profiler/: test_calltree_builder.cpp  test_profiler.cpp
tests/scrfd_unit/: test_scrfd_unit.cpp
tests/swapPipeline_integration/: test_swapPipeline_integration.cpp
tests/text_draw/: CMakeLists.txt  test_multiline_text_size.cpp  test_text_draw_core.cpp  test_text_draw_edge_cases.cpp  test_text_draw_enhanced_api.cpp  test_text_draw_performance.cpp  test_text_draw_visual_validation.cpp
tests/text_render_config/: test_text_render_config.cpp
tests/v4l2/: test_v4l2_buffer.cpp
tests/videoLoader/: test_videoLoader.cpp
tests/web/: CMakeLists.txt  test_webrtcTransport.cpp
tests/webcam/: test_webcam.cpp
tests/wflw_integration/: test_benchmark_scrfd_mediapipe_on_wflw.cpp  test_benchmark_scrfd_pfld_on_wflw.cpp  test_config.yaml  test_integration_scrfd_pfld_on_wflw.cpp  test_landmark_mapping.cpp  test_wflw_benchmark.cpp  wflw_loader.h  (+3 more)
www/: index.html
(+62 files in other folders)
